--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,17 +43,17 @@ repos:
     types_or: [c, header]
     language: system
 
-  - id: build-fuzzer
-    name: build-fuzzer
-    files: ^(src/|test/fuzz/)
-    language: system
-    types_or: [c, header]
-    entry: |
-      export CC=clang
-      export CXX=clang++
-      fuzz_harness=$(ls -d test/fuzz/device/*/)
-      for h in $fuzz_harness
-      do
-        make -C $h get-deps
-        make -C $h all
-      done
+#  - id: build-fuzzer
+#    name: build-fuzzer
+#    files: ^(src/|test/fuzz/)
+#    language: system
+#    types_or: [c, header]
+#    entry: |
+#      bash -c 'export CC=clang
+#      export CXX=clang++
+#      fuzz_harness=$(ls -d test/fuzz/device/*/)
+#      for h in $fuzz_harness
+#      do
+#        make -C $h get-deps
+#        make -C $h all
+#      done'
