--- a/examples/dual/host_hid_to_device_cdc/CMakeLists.txt
+++ b/examples/dual/host_hid_to_device_cdc/CMakeLists.txt
@@ -28,13 +28,15 @@ target_include_directories(${PROJECT} PUBLIC
 family_configure_dual_usb_example(${PROJECT} noos)
 
 # due to warnings from Pico-PIO-USB
-target_compile_options(${PROJECT} PUBLIC
-  -Wno-error=shadow
-  -Wno-error=cast-align
-  -Wno-error=cast-qual
-  -Wno-error=redundant-decls
-  -Wno-error=sign-conversion
-  -Wno-error=conversion
-  -Wno-error=sign-compare
-  -Wno-error=unused-function
-  )
+if (FAMILY STREQUAL rp2040)
+  target_compile_options(${PROJECT} PUBLIC
+    -Wno-error=shadow
+    -Wno-error=cast-align
+    -Wno-error=cast-qual
+    -Wno-error=redundant-decls
+    -Wno-error=sign-conversion
+    -Wno-error=conversion
+    -Wno-error=sign-compare
+    -Wno-error=unused-function
+    )
+endif ()
