change pico-sdk checkout branch to master

--- a/.github/actions/get_deps/action.yml
+++ b/.github/actions/get_deps/action.yml
@@ -13,7 +13,7 @@ runs:
       uses: actions/checkout@v4
       with:
         repository: raspberrypi/pico-sdk
-        ref: develop
+        ref: master
         path: pico-sdk
 
     - name: Linux dependencies
