fix multiple flag on compiling

--- a/hw/bsp/espressif/components/tinyusb_src/CMakeLists.txt
+++ b/hw/bsp/espressif/components/tinyusb_src/CMakeLists.txt
@@ -69,6 +69,7 @@ if (DEFINED LOG)
 endif()
 
 if(DEFINED CFLAGS_CLI)
+  separate_arguments(CFLAGS_CLI)
   list(APPEND compile_definitions ${CFLAGS_CLI})
 endif()
 
