--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,12 +118,17 @@ jobs:
     runs-on: [self-hosted, Linux, X64, hifiphile]
     env:
       BUILD_ARGS: ${{ join(fromJSON(needs.set-matrix.outputs.json)['arm-iar'], ' ') }}
+      IAR_LMS_CLOUD_URL: https://license.cloud.iar.com
+      IAR_LMS_BEARER_TOKEN: ${{ secrets.IAR_LMS_BEARER_TOKEN }}
     steps:
       - name: Clean workspace
         run: |
           echo "Cleaning up previous run"
           rm -rf "${{ github.workspace }}"
           mkdir -p "${{ github.workspace }}"
+
+      - name: Toolchain version
+        run: iccarm --version
 
       - name: Checkout TinyUSB
         uses: actions/checkout@v4
