--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,8 +118,7 @@ jobs:
     runs-on: [self-hosted, Linux, X64, hifiphile]
     env:
       BUILD_ARGS: ${{ join(fromJSON(needs.set-matrix.outputs.json)['arm-iar'], ' ') }}
-      IAR_LMS_CLOUD_URL: https://license.cloud.iar.com
-      IAR_LMS_BEARER_TOKEN: ${{ secrets.IAR_LMS_BEARER_TOKEN }}
+      # IAR_LMS_BEARER_TOKEN: ${{ secrets.IAR_LMS_BEARER_TOKEN }}
     steps:
       - name: Clean workspace
         run: |
