--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,11 +54,11 @@ jobs:
               echo "              toolchain: ['$toolchain']" >> .circleci/config2.yml
               echo "              family: $FAMILY" >> .circleci/config2.yml
               # due to limit of IAR capacity, use medium resource
-              if [[ $toolchain == arm-iar ]]; then
-                echo "              resource_class: ['large']" >> .circleci/config2.yml
-              else
-                echo "              resource_class: ['medium+']" >> .circleci/config2.yml
-              fi
+              #if [[ $toolchain == arm-iar ]]; then
+              #  echo "              resource_class: ['large']" >> .circleci/config2.yml
+              #else
+              echo "              resource_class: ['medium+']" >> .circleci/config2.yml
+              #fi
 
               # add large resources
               if [ "$(echo $FAMILY_LARGE | jq 'length')" -gt 0 ]; then
