ci(tinyusb): Added esp-usb test_apps build and run

--- a/.github/workflows/build_idf_examples.yml
+++ b/.github/workflows/build_idf_examples.yml
@@ -1,4 +1,4 @@
-name: Build ESP-IDF USB examples
+name: ESP-IDF USB Device examples
 
 on:
   schedule:
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
-      - name: Build ESP-IDF USB Device examples
+      - name: Build
         shell: bash
         run: |
           . ${IDF_PATH}/export.sh
