fix warning due to bsp_rom_registers.c

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -33,6 +33,7 @@ jobs:
 
     - name: Build Fuzzer
       run: |
+        clang --version
         export CC=clang
         export CXX=clang++
         fuzz_harness=$(ls -d test/fuzz/device/*/)
