--- a/examples/device/cdc_msc/CMakeLists.txt
+++ b/examples/device/cdc_msc/CMakeLists.txt
@@ -6,6 +6,11 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/../../../hw/bsp/family_support.cmake)
 # gets PROJECT name for the example (e.g. <BOARD>-<DIR_NAME>)
 family_get_project_name(PROJECT ${CMAKE_CURRENT_LIST_DIR})
 
+if (BUILD_ZEPHYR)
+  set(BOARD_ROOT ${TOP}/hw/bsp/${FAMILY})
+  find_package(Zephyr REQUIRED HINTS ${TOP}/lib/zephyr)
+endif ()
+
 project(${PROJECT} C CXX ASM)
 
 # Checks this example is valid for the family and initializes the project
@@ -16,20 +21,29 @@ if(FAMILY STREQUAL "espressif")
   return()
 endif()
 
-add_executable(${PROJECT})
+if (BUILD_ZEPHYR)
+  set(EXE_NAME app)
+else()
+  set(EXE_NAME ${PROJECT})
+  add_executable(${EXE_NAME})
+endif()
 
 # Example source
-target_sources(${PROJECT} PUBLIC
+target_sources(${EXE_NAME} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/msc_disk.c
   ${CMAKE_CURRENT_SOURCE_DIR}/src/usb_descriptors.c
   )
 
 # Example include
-target_include_directories(${PROJECT} PUBLIC
+target_include_directories(${EXE_NAME} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src
   )
 
-# Configure compilation flags and libraries for the example... see the corresponding function
-# in hw/bsp/FAMILY/family.cmake for details.
-family_configure_device_example(${PROJECT} noos)
+# Configure compilation flags and libraries for the example without RTOS.
+# See the corresponding function in hw/bsp/FAMILY/family.cmake for details.
+if (BUILD_ZEPHYR)
+  family_configure_device_example(${EXE_NAME} zephyr)
+else()
+  family_configure_device_example(${EXE_NAME} noos)
+endif()
