--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
         toolchain:
           # - 'arm-clang' is built by circle-ci in PR
           - 'aarch64-gcc'
-          - 'arm-gcc'
+#          - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
     with:
@@ -72,7 +72,7 @@ jobs:
   # Build Make (built by circle-ci in PR, only build on push here)
   # ---------------------------------------
   make:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && false
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
@@ -113,7 +113,7 @@ jobs:
   # Build IAR on HFP self-hosted
   # ---------------------------------------
   arm-iar:
-    if: github.repository_owner == 'hathach' && github.event_name == 'push'
+    if: github.repository_owner == 'hathach' && github.event_name == 'push' && false
     needs: set-matrix
     runs-on: [self-hosted, Linux, X64, hifiphile]
     env:
@@ -137,3 +137,24 @@ jobs:
 
       - name: Build
         run: python3 tools/build.py --one-per-family --toolchain iar $BUILD_ARGS
+
+  # ---------------------------------------
+  # Zephyr
+  # ---------------------------------------
+  zephyr:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout TinyUSB
+        uses: actions/checkout@v4
+
+      - name: Setup Zephyr project
+        uses: zephyrproject-rtos/action-zephyr-setup@v1
+        with:
+          app-path: examples
+          toolchains: arm-zephyr-eabi
+
+      - name: Build
+        run: |
+          west build -b pca10056 examples/device/cdc_msc
+          west build -b pca10056 examples/device/msc_dual_lun
