--- a/examples/host/midi_rx/Makefile
+++ b/examples/host/midi_rx/Makefile
@@ -1,9 +1,13 @@
-include ../../../tools/top.mk
-include ../../make.mk
+include ../../build_system/make/make.mk
+
 INC += \
 	src \
 	$(TOP)/hw \
+
 # Example source
-EXAMPLE_SOURCE += $(wildcard src/*.c)
+EXAMPLE_SOURCE += \
+	src/main.c
+
 SRC_C += $(addprefix $(CURRENT_PATH)/, $(EXAMPLE_SOURCE))
-include ../../rules.mk
+
+include ../../build_system/make/rules.mk
